fix overflow bugs

--- a/src/index.css
+++ b/src/index.css
@@ -72,13 +72,17 @@ main {
 
     .img-content {
         position: absolute;
-        top: 5%;
-        left: 5%;
-        right: 5%;
-        overflow-y: scroll;
+        padding: 1rem;
+        top: 0;
+        left: 0;
+        overflow-y: auto;
         height: 100%;
         color: white;
         display: none;
+    }
+
+    ::-webkit-scrollbar {
+        width: 0;
     }
 
     .album:hover .img-content {
